# HybridHSDLA

./: INSTALL.sh  LICENSE  README.md  ratio.config.template
flapw_opt/: CMakeLists.txt
flapw_opt/src/: AtomData.cpp  CMakeLists.txt  FleurData.cpp  HDF5Store.cpp  binmat.cpp  compare_smat.cpp  h_and_s.cpp  h_and_s_stripped.cpp  h_and_s_stripped_v2.cpp  logging.cpp  special_funcs.cpp  tensor_AB_match.cpp  timing.c  types_helper.cpp  wrappers.cpp
flapw_opt/src/hetero-mic-gpu/: README.md  sink.c  source.cpp  source.h
flapw_opt/src/hybrid/: utils.c  utils.h  zher2k_hyb.c  zherk_hyb.c  zherkx_hyb.c
flapw_opt/src/hybrid/test_ratio/: Makefile  README.md  compute_ratio.cpp  kernels.cpp  kernels.h  timing.c  timing.h
flapw_opt/src/hybrid/test_ratio/bkp/: timings.c  timings.h
flapw_opt/src/include/: AtomData.h  FleurData.h  HDF5Store.h  binmat.h  configured_input.h.in  constants.h  core.h  fleur_interop.h  logging.h  special_funcs.h  types.h  util.h  utils.h
flapw_opt/src/include/acc/: blas.h  cx_double.h  h_and_s_stripped.h  lapack.h  timing.h  types4stripped.h  wrappers.h
flapw_opt/tests/: CMakeLists.txt  FleurData_test.cpp  FleurWrap_test.cpp  binmat_test.cpp  conf_test.cpp  flapw_verify.py  test_common.h
flapw_opt/tests/sample_input/: README.md
flapw_opt/tests/sample_input/two_atoms/: .inp_two_atoms  enpara  fleur_dump.h5  fort.93  inp  kpts  rmall  struct.xsf
fleur/: CMakeLists.txt  README.md
fleur/src/: CMakeLists.txt  Ek_write_sl.f  Imake.tmpl  Imakefile  Makefile  SConscript  abccoflo.f  abclocdn.F  abclocdn_pulay.F  abcof.F  abcrot.f  abcrot2.f  aline.F  aline_muff.F  alineso.F  angle.f  anglso.f  apws.F  apws_dim.f  atom2.f  atom_sym.f  bandstr1.F  bfgs.f  binmat.f90  bmt.f  boxdim.f  bravais.f  bravais_symm.f  broyden.F  brysh1.f  brysh2.f  brzone.f  calculator.F  ccdnup.f  cdn_read.F  cdndif.f  cdngen.f  cdninf.f  cdnmt.f  cdnovlp.F  (+371 more)
