set(fleur_SRC
binmat.f90
m_types.f
m_od_types.f
cfft_ws.f
erf.f
dlamch.f
constants.f
cpu_time.F
outtime.f
ylm4.f
grule.f
gaussp.f
gtest.f
ptsym.f
lhcal.f
local_sym.f
angle.f
dotir.f
rcerf.f
set_c.f
fft3dxc.f
fft2d.F
fft3d.f
convol.f
calculator.F
rw_inp.f
loddop.f
wrtdop.f
cotra.f
intgr.F
pol_angle.f
spgrot.f
starf.f
bravais.f
Ek_write_sl.f
orb_comp2.f
pwint_sl.f
q_int_sl.F
q_mt_sl.f
slab_dim.f
slabgeom.f
orthoglo.F
inv3.f
phasy1.f
outcdn.f
xsf_io.f
plotdop.f
stern.f
sphbes.f
dsphbs.f
tetra_ef.f
make_tetra.f
triang.f
trisrt.f
nmat_rot.f
u_mix.f
kprep.f
fulstar.f
ordstar.f
fleurenv.F
tetcon.f
kvecon.f
kpttet.f
kptmop.f
divi.f
brzone.f
bandstr1.F
julia.f
rw_symfile.f
relax.f
relcor.f
xcxal.f
xcwgn.f
xcbh.f
xcvwn.f
xcpz.f
xcall.f
matmul.f
ss_sym.f
soc_sym.f
setcor.f
enpara.f
dos_bin.f
ptdos.f
smooth.f
grdrsis.f
grdrsvac.f
stmix.f
tetra_dos.f
evaldos.f
doswrite.f
mod_symdata.f
first_glance.f
vec_for_lo.f
corg91.F
mkgxyz3.f
corl91.f
mkgl0.f
mkgz.f
metr_z0.f
metric.f
xch91.F
setmn.f
pbecor2.f
corpbe.f
exchpbe.f
easypbe.f
dylm3.f
lhglptg.f
vxcl91.f
vxcwb91.f
vxcpw91.f
excl91.f
excpw91.f
excwb91.f
excepbe.f
vxcepbe.f
xcallg.f
grdchlh.f
potl0.f
mkgylm.f
vmtxcg.F
od_mkgz.f
od_mkgxyz3.f
vvacxcg.f
prp_xcfft_map.f
visxcg.f
hssr_wu.F
differ.f
apws.F
atom2.f
boxdim.f
brysh1.f
brysh2.f
broyden.F
checkdop.f
cdndif.f
orbmom2.f
od_chirot.f
od_phasy.f
qpw_to_nmt.f
cylbes.f
dcylbs.f
od_cylbes.f
cdnovlp.F
cdnsp.f
pwint.f
qsf.f
cdntot.f
convn.f
cored.F
radsra.f
radsrd.F
radsrdn.f
radflo.F
radfun.f
diflgr.f
dotset.f
doswt.f
dosint.f
dosef.f
rhosphnlo.f
cdnmt.f
ef_newton.f
efield.f
eparas.f
fergwt.F
ferhis.f
fertri.f
fermie.F
f2u.f
u2f.f
flipcdn.f
fitchk.f
gaunt.f
rot_den_mat.f
gkptwgt.f
html_out.f
ifft235.f
inpeig.f
int_nv.F
int_21.f
int_21lo.f
inwint.f
lhglpts.f
lodpot.f
qfix.f
mix.F
m_perp.f
mpmom.F
nstm3.F
outint.f
outeig_muff.f
cylpts.f
stden.f
optional.f
pldngen.f
prp_qfft.f
prp_xcfft.f
prp_qfft_map.f
points.f
potdis.f
psqpw.F
qranf.f
rad_ovlp.f
rfft.F
rhomt.f
rhonmt.f
rhomt21.f
rhonmt21.f
write_gw.F
spg2set.f
d_wigner.f
strgn.f
mapatom.F
od_mapatom.F
od_chisym.f
od_strgn1.f
stepf.F
setup.f
sort.f
sphpts.f
xy_av_den.f
stpot1.f
tlo.f
tlmplm.F
unor2or.f
modcyli.f
modcylk.f
vacp5_0.f
vacp5_z.f
visp5_0.f
visp5_z.f
vacfun.f
vacudz.f
vacuz.f
vrfftb.f
vrfftf.f
vrffti.f
vmts.F
vintcz.f
visxc.f
vmtxc.f
vvac.f
vvacis.f
vvacxc.f
vvacxy.f
od_vvac.f
od_vvacis.f
pot_mod.f
vgen.F
difcub.f
force_a12.f
force_a3.f
bfgs.f
bfgs0.f
geo.f
rw_noco.f
force_0.f
force_a4.f
force_w.f
totale.f
diff3.f
hsoham.f
sointg.f
sorad.f
soinit.f
anglso.f
sgml.f
spnorb.f
orbmom.f
setlomap.F
setabc1lo.f
abccoflo.f
setabc1locdn.f
rhodirgen.f
inpnoco.F
rhomtlo.f
rhonmtlo.f
force_a21_U.f
force_a21_lo.f
strgn_dim.F
od_kptsgen.f
convn_dim.f
prp_xcfft_box.f
inpeig_dim.f
apws_dim.f
parawrite.f
dimen7.F
qal_21.f
vmatgen.f
uj2f.f
clebsch.f
sgaunt.f
umtx.f
v_mmp.F
u_setup.f
force_b8.f
cgc.f
nabla.f
dr2fdr.f
mcd_init.f
u_ham.F
grp_k.f
h_nonmuff.F
aline_muff.F
geneigprobl.F
mod_loccoeff.f
locrectify.F
zsymsecloc.F
franza.F
hsint.F
hsvac.F
outeig.F
sympsi.F
abclocdn.F
abcof.F
aline.F
cdninf.f
pwden_old.F
abcrot2.f
pwden.F
abclocdn_pulay.F
to_pulay.F
od_abvac.f
vacden.F
hsohelp.F
alineso.F
gw_vxc.F
savewigner.f
abcrot.f
gw_eig.F
slomat.F
hlomat.F
hssphn.F
od_vacfun.f
od_hsvac.F
eigen.F
eigenso.F
dimens.F
chkmt.f
inped.F
n_mat.f
force_a21.F
force_a8.F
cdn_read.F
cdnval.F
cdngen.f
nshell.f
jcoff.f
jcoff2.F
ssomat.F
bmt.f
diff.f
crtail.f
kernel1.f
kernel2.f
inconz.f
inconi.f
coredir.f
findlim.f
ccsdnt.f
ccdnup.f
felim.f
cnodes.f
core_.f
spratm.f
nwrfst.f
cfnorm.f
coreerr.f
corehff.f
rinvgj.f
rsimp.f
etabinit.F
coredr.F
fleur.F)

set(inpgen_SRC
m_od_types.f
m_types.f
calculator.F
constants.f
dotset.f
closure.f
setab.f
atom_sym.f
lattice2.f
enpara.f
bravais_symm.f
super_check.f
symproperties.f
generator.f
spg_gen.f
crystal.f
read_record.f
rw_symfile.f
struct_input.f
cotra.f
matmul.f
inv3.f
write_struct.f
ss_sym.f
soc_sym.f
soc_or_ssdw.f
chkmt.f
rw_inp.f
set_inp.f
xsf_io.f
inpgen.f)

add_executable(fleur ${fleur_SRC})
add_executable(inpgen ${inpgen_SRC})
target_link_libraries(fleur ${fleur_LIBS})
target_link_libraries(inpgen ${fleur_LIBS})

        
install(TARGETS fleur inpgen
        CONFIGURATIONS Release
        DESTINATION bin)